<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/DonorName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"/>



    <TextView
        android:id="@+id/DonorArea1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/DonorMobile1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/DonorBlood_group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/DonorEmail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        android:textStyle="bold"/>

</LinearLayout>