<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"

        android:orientation="vertical"        >


        <TextView
            android:id="@+id/DonorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#9fcbd3"
            android:textSize="20sp"
            android:textStyle="bold"/>



        <TextView
            android:id="@+id/DonorArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/DonorMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/DonorBlood_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/DonorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            ></TextView>


    </LinearLayout>

</LinearLayout>